Fixed breaks in preview mode

--- a/src/components/Editor/css/preview-mode.css
+++ b/src/components/Editor/css/preview-mode.css
@@ -4,7 +4,7 @@
 }
 
 .preview-mode .break {
-	--height: calc(var(--line-height) * 1px);;
+	--height: calc(var(--line-height) * 1em);
 	height: var(--height);
 	background:
 		linear-gradient(
